# agentic-research-decision-platform

./: .env.example  .gitignore  Dockerfile  FINAL_VERIFICATION.md  PRESENTATION.md  PROJECT_SUMMARY.md  README.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agents/: analyst_agent.py  critic_agent.py  evaluator_agent.py  fact_checker_agent.py  memory_agent.py  planner_agent.py  presentation_agent.py  report_writer_agent.py  research_agent.py  visualization_agent.py
app/config/: settings.py
app/core/: compat.py
app/graph/: __init__.py  nodes.py  state.py  workflow.py
app/models/: __init__.py  schemas.py
app/storage/: memory.py
app/tools/: citation_tools.py  file_tools.py  latex_report_tools.py  latex_report_v2.py  llm_tools.py  report_tools.py  search_tools.py  visualization_tools.py
app/ui/: streamlit_app.py  ui_helpers.py
data/example_inputs/: demo_clinical_ai.txt
docs/: AI_GUIDE.md  AI_USAGE_GUIDE.md  ARCHITECTURE.md  DEMO_DAY_CHECKLIST.md  DEVELOPER_GUIDE.md  EVALUATION.md  LIMITATIONS.md  SCREENSHOT_GUIDE.md  TESTING_GUIDE.md  USER_GUIDE.md
presentation/: final_presentation.pptx
report/: final_report.aux  final_report.bbl  final_report.blg  final_report.fdb_latexmk  final_report.fls  final_report.lof  final_report.lot  final_report.md  final_report.out  final_report.tex  final_report.toc  references.bib
scripts/: build_report_pdf.py  capture_ui_screenshots.py  generate_latex_report.py  generate_presentation.py  generate_report.py  run_demo.py  run_real_workflow.py  run_tests.sh
(+105 files in other folders)
