[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-research-decision-platform"
version = "1.0.0"
description = "A multi-agent research and decision intelligence platform using LangGraph, FastAPI, Streamlit, and deterministic mock mode."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Course Final Project Team" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "streamlit>=1.31.0",
  "pydantic>=2.6.0",
  "langgraph>=0.2.60",
  "langchain>=0.2.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "matplotlib>=3.8.0",
  "python-pptx>=0.6.23",
  "pytest>=8.0.0",
  "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.26.0", "ruff>=0.4.0", "mypy>=1.8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
